# dogvibes

Attic/dogvibes/: dogvibes.conf  setup_spotify
Attic/dogvibes/bashapi/: getqueueposition  pause  playtrack  previoustrack  removefromqueue  search
Attic/dogvibes/src/: Collection.vala  apex-speaker.vala  radio-source.vala  track.vala
Attic/interface/: api_test
Attic/interface/config/: environment.rb  routes.rb
Attic/libspotifyvalabindings/: README  libspotify.vapi
clients/dogbark/: index.html
clients/dogbite/: index.html
clients/dogbite/css/: size.css  style.css
clients/dogbite/img/: art-playctrl.psd  art.psd
clients/dogbite/js/: cookies.js  dogbite.js
clients/dogbone/: index.html
clients/dogbone/css/: skin.css  style.css
clients/dogbone/js/: dogbone-core.js  dogbone-modules.js  dogvibes-core.js  jquery-ui.js  jquery.growl.js
clients/dogtengtk/: dogtengtk.py
clients/iDog/: MainWindow.xib  PlaylistView.xib  SearchView.xib  SettingsView.xib  TrackView.xib  iDog_Prefix.pch  main.m
clients/iDog/Classes/: DogUtils.h  DogUtils.m  FirstViewController.h  FirstViewController.m  PlaylistViewController.h  PlaylistViewController.m  SearchViewController.h  SearchViewController.m  SettingsViewController.h  SettingsViewController.m  Track.h  Track.m  TrackViewController.h  TrackViewController.m  iDogAppDelegate.h  iDogAppDelegate.m
clients/iDog/iDog.xcodeproj/: johan.mode1v3  johan.pbxuser  project.pbxproj
dists/: install_debian
dists/OsX/: buildosxapp  setup.py
dists/debian/DEBIAN/: control
dists/debian/etc/: dogvibes.conf
dogvibes/src/: albumart.py  albumart_api.py  amp.py  api_server.py  collection.py  config.py  database.py  devicespeaker.py  dog.py  dogspotkey.key  dogvibes.py  fakespeaker.py  filesource.py  master.py  models.py  playlist.py  positional.py  server.py  spotifysource.py  sr.xml  srradiosource.py  track.py  twisted_server.py  user.py  ws_server.py  youtubesource.py
dogvibes/src/tornado/: api_server.py  auth.py  httpserver.py  iostream.py  web.py  websocket.py
dogvibes/test/: api_test  api_test2  spotplay.py  test_startup_00  test_startup_01  test_startup_02  test_startup_03  test_startup_04
dogvibes/tests/: test_the_dog.py
dogvibes/unittests/: test_the_dog.py
gst-spot-src/: AUTHORS  Makefile.am  configure.ac
gst-spot-src/src/: Makefile.am  gstspot.c  gstspotsrc.c  gstspotsrc.h
gst-spot-src/tests/: Makefile.am
gst-spot-src/tests/check/: Makefile.am
gst-spot-src/tests/check/elements/: spotsrc.c
trash/dogvibes-old/: compile
trash/dogvibes-old/bashapi/: connectspeaker  nexttrack  play  resume  stop
trash/dogvibes-old/dogvibes/: README  dogvibes.conf  runserver  spotify.vapi
trash/dogvibes-old/src/: device-speaker.vala  fake-speaker.vala  server.vala
trash/dogvibes-vala/: search
trash/dogvibes-vala/bashapi/: disconnectspeaker  getalltracksinqueue  getplayedseconds  getstatus  search  seek
trash/dogvibes-vala/src/: amplifier-interface.vala  file-source.vala  remote-speaker-interface.vala  setup_spotify.vala  spotify-source.vala
trash/dogvibes-vala/test/: dbus-test.rb
trash/extjs_client/: client.html
trash/gst-spotify-src/: README  aclocal.m4  autogen.sh  configure
trash/gst-spotify-src/src/: Makefile.am  gstspotify.c  gstspotifyringbuffer.h  gstspotifysrc.c  gstspotifysrc.h
trash/pyspotify/: README  spotify.c  test.py
trash/rails-server/: api_test
trash/simple_client/: client.html
trash/spikes/: track.py
trash/spikes/indexer/: Indexer.vala  indexer.c
trash/spikes/inotify/: inotify.c
trash/spikes/last.fm/: lastfm.c  lastfm.h  main.c
trash/spikes/python/: curl.py  indexer.py  sqlite.py  track.py
trash/spikes/smartSearch/: smartsearch.py
trash/spikes/src-seek/: seek.c
trash/spikes/taglib/: Tagz.vala
trash/spikes/vala-sqlite/: SqliteSample.vala
trash/spikes/vapi/: Spotify.vala  spotify.vapi
trash/spikes/webserver/: api.py
trash/spotifypythonbindings/: setup.py  spotify.c
(+35 files in other folders)
